Shader uniforms clean up

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,16 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "build",
-      "type": "shell",
-      "command": "tsc"
-    },
-    {
-      "label": "run",
-      "type": "shell",
-      "command": "tsc ; live-server"
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "build",
+			"type": "shell",
+			"command": "tsc"
+		},
+		{
+			"label": "run",
+			"type": "shell",
+			"command": "tsc ; live-server",
+			"problemMatcher": []
+		}
+	]
 }
