--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
             - name: Checkout project
               uses: actions/checkout@v3
             - name: Build and push
-              uses: alexthemaster/action-build-typescript@v. # check the releases tab on the right for versions (looks like this: v1.0.0)
+              uses: alexthemaster/action-build-typescript@v1.3.1 # check the releases tab on the right for versions (looks like this: v1.0.0)
               # use this if you want the sharpest of cutting edges (can and probably WILL break from time to time)
               # uses: alexthemaster/action-build-typescript@master
               with:
                 pushToBranch: true # optional; can either be true or false | defaults to false
                 branch: 'gh-pages' # optional; the name of the branch the action should push the compiled code to | defaults to dist
-                githubToken: ${{ secrets.GITHUB_TOKEN }} # required if you use the pushToBranch option
+                githubToken: ${{ secrets.TOKEN }} # required if you use the pushToBranch option
