--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"declaration": false,
 		"declarationMap": false,
 		"sourceMap": false,
-		"outDir": "./build",
+		"outDir": "dist",
 		"removeComments": true,
 		"inlineSourceMap": false,
 		"inlineSources": false,
