--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,11 @@
 			"label": "build",
 			"type": "shell",
 			"command": "./build.sh"
+		},
+		{
+			"label": "run",
+			"type": "shell",
+			"command": "./run.sh"
 		}
 	]
 }
